evaluation metrics modified

--- a/ThesisLogic.ipynb
+++ b/ThesisLogic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,22 +32,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# training data\n",
-    "# train = pd.read_csv(r\"C:\\Users\\Admin\\OneDrive\\Documents\\Webdev\\hatespeech\\train.csv\", nrows=5000)\n",
+    "train = pd.read_csv(r\".\\hatespeech\\train.csv\", nrows=10000)\n",
     "\n",
     "# testing data\n",
-    "# test = pd.read_csv(r\"C:\\Users\\Admin\\OneDrive\\Documents\\Webdev\\hatespeech\\test.csv\", nrows=5000)\n",
-    "\n",
-    "\n",
-    "# # # #training data\n",
-    "train = pd.read_csv(r\"C:\\Users\\jmest\\Documents\\Files\\C4S2\\Thesis\\ThesisFiles-main\\ThesisFiles-main\\hatespeech\\train.csv\")\n",
-    "\n",
-    "# # # #testing data\n",
-    "test = pd.read_csv(r\"C:\\Users\\jmest\\Documents\\Files\\C4S2\\Thesis\\ThesisFiles-main\\ThesisFiles-main\\hatespeech\\test.csv\")\n",
+    "test = pd.read_csv(r\".\\hatespeech\\test.csv\", nrows=10000)\n",
     "\n",
     "\n"
    ]
@@ -62,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +161,7 @@
        "[10000 rows x 2 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +184,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +205,7 @@
        "5340"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +226,7 @@
        "4660"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +314,7 @@
        "494"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -445,8 +438,8 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                   text  label  \\\n",
-       "0     Inaasahan na ni Vice President Jejomar Binay n...      0   \n",
+       "                                                   text  label   \n",
+       "0     Inaasahan na ni Vice President Jejomar Binay n...      0  \\\n",
        "1     Mar Roxas TANG INA TUWID NA DAAN DAW .. EH SYA...      1   \n",
        "2     Salamat sa walang sawang suporta ng mga taga m...      0   \n",
        "3            @rapplerdotcom putangina mo binay TAKBO PA      1   \n",
@@ -474,7 +467,7 @@
        "[9506 rows x 3 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +536,7 @@
        "5030"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +557,7 @@
        "4476"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +614,7 @@
        "Name: tokenize, dtype: object"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -668,51 +661,51 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>6125</th>\n",
-       "      <td>[yung, nagsasabing, automatic, roxas, votes, d...</td>\n",
-       "      <td>[yung, nagsasabing, automatic, roxas, vote, di...</td>\n",
+       "      <th>8531</th>\n",
+       "      <td>[paolo, roxas, yung, unang, beses, magsalita, ...</td>\n",
+       "      <td>[paolo, roxas, yung, unang, be, magsalita, har...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8961</th>\n",
-       "      <td>[khit, wala, yang, issue, yan, e, mananalo, pr...</td>\n",
-       "      <td>[khit, wala, yang, issue, yan, e, mananalo, pr...</td>\n",
+       "      <th>390</th>\n",
+       "      <td>[morales, says, she, has, reliable, source, to...</td>\n",
+       "      <td>[morale, say, she, ha, reliable, source, to, p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>347</th>\n",
-       "      <td>[agree, binay, bbm, prez, and, vp, nya, scary]</td>\n",
-       "      <td>[agree, binay, bbm, prez, and, vp, nya, scary]</td>\n",
+       "      <th>7762</th>\n",
+       "      <td>[vp, binay, is, winner, in, providing, good, l...</td>\n",
+       "      <td>[vp, binay, is, winner, in, providing, good, l...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6092</th>\n",
-       "      <td>[binay, nararamdaman, paghahangad, ninyo, maka...</td>\n",
-       "      <td>[binay, nararamdaman, paghahangad, ninyo, maka...</td>\n",
+       "      <th>4835</th>\n",
+       "      <td>[to, mar, roxas, supporters, time, to, eat, yo...</td>\n",
+       "      <td>[to, mar, roxas, supporter, time, to, eat, you...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4503</th>\n",
-       "      <td>[don, t, cheapen, the, presidency, duterte, te...</td>\n",
-       "      <td>[don, t, cheapen, the, presidency, duterte, te...</td>\n",
+       "      <th>7553</th>\n",
+       "      <td>[okey, lang, manalo, si, duterte, wag, lang, s...</td>\n",
+       "      <td>[okey, lang, manalo, si, duterte, wag, lang, s...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               tokenize  \\\n",
-       "6125  [yung, nagsasabing, automatic, roxas, votes, d...   \n",
-       "8961  [khit, wala, yang, issue, yan, e, mananalo, pr...   \n",
-       "347      [agree, binay, bbm, prez, and, vp, nya, scary]   \n",
-       "6092  [binay, nararamdaman, paghahangad, ninyo, maka...   \n",
-       "4503  [don, t, cheapen, the, presidency, duterte, te...   \n",
+       "                                               tokenize   \n",
+       "8531  [paolo, roxas, yung, unang, beses, magsalita, ...  \\\n",
+       "390   [morales, says, she, has, reliable, source, to...   \n",
+       "7762  [vp, binay, is, winner, in, providing, good, l...   \n",
+       "4835  [to, mar, roxas, supporters, time, to, eat, yo...   \n",
+       "7553  [okey, lang, manalo, si, duterte, wag, lang, s...   \n",
        "\n",
        "                                          lematize_nltk  \n",
-       "6125  [yung, nagsasabing, automatic, roxas, vote, di...  \n",
-       "8961  [khit, wala, yang, issue, yan, e, mananalo, pr...  \n",
-       "347      [agree, binay, bbm, prez, and, vp, nya, scary]  \n",
-       "6092  [binay, nararamdaman, paghahangad, ninyo, maka...  \n",
-       "4503  [don, t, cheapen, the, presidency, duterte, te...  "
+       "8531  [paolo, roxas, yung, unang, be, magsalita, har...  \n",
+       "390   [morale, say, she, ha, reliable, source, to, p...  \n",
+       "7762  [vp, binay, is, winner, in, providing, good, l...  \n",
+       "4835  [to, mar, roxas, supporter, time, to, eat, you...  \n",
+       "7553  [okey, lang, manalo, si, duterte, wag, lang, s...  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1256,7 +1249,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
-      "[nltk_data]     C:\\Users\\jmest\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\Admin\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
       "[nltk_data]       date!\n"
      ]
@@ -1267,7 +1260,7 @@
        "True"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1307,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1424,8 +1417,8 @@
        "</div>"
       ],
       "text/plain": [
-       "      label                                               text  \\\n",
-       "9496      1  The desperate move of Roxas to ask Poe to \"uni...   \n",
+       "      label                                               text   \n",
+       "9496      1  The desperate move of Roxas to ask Poe to \"uni...  \\\n",
        "9497      1  After Sinulog, kani na sad.. binay ikaw na.. a...   \n",
        "9498      1  Wag na wag ko lang malalaman na buhay ni Mar R...   \n",
        "9499      0  Kung di man si duterte, Miriam nalang presiden...   \n",
@@ -1436,8 +1429,8 @@
        "9504      1          Mas nakakainis ad ni Mar kaysa kay Binay.   \n",
        "9505      0  Preliminary and partial results coming in sugg...   \n",
        "\n",
-       "                                             rm_stpwrds  \\\n",
-       "9496  the desperate move of roxas to ask poe to unit...   \n",
+       "                                             rm_stpwrds   \n",
+       "9496  the desperate move of roxas to ask poe to unit...  \\\n",
        "9497         after sinulog kani sad binay pinakamakapal   \n",
        "9498  wag wag lang malalaman buhay mar roxas susunod...   \n",
        "9499  di man si duterte miriam nalang president mar ...   \n",
@@ -1448,8 +1441,8 @@
        "9504                    mas nakakainis ad mar kay binay   \n",
        "9505  preliminary and partial results coming in sugg...   \n",
        "\n",
-       "                                               tokenize  \\\n",
-       "9496  [the, desperate, move, of, roxas, to, ask, poe...   \n",
+       "                                               tokenize   \n",
+       "9496  [the, desperate, move, of, roxas, to, ask, poe...  \\\n",
        "9497  [after, sinulog, kani, sad, binay, pinakamakapal]   \n",
        "9498  [wag, wag, lang, malalaman, buhay, mar, roxas,...   \n",
        "9499  [di, man, si, duterte, miriam, nalang, preside...   \n",
@@ -1473,7 +1466,7 @@
        "9505  [preliminary, and, partial, result, come, in, ...  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1484,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1498,18 +1491,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7433380084151473\n"
+      "Training Data Accuracy using metrics.accuracy_score(): 0.9667868951006913\n",
+      "Test Data Accuracy using metrics.accuracy_score(): 0.7433380084151473\n",
+      "Precision using metrics.precision_score(): 0.7819287576020851\n",
+      "Recall using metrics.recall_score(): 0.6517016654598118\n"
      ]
     }
    ],
    "source": [
+    "from sklearn import metrics\n",
     "# Train the SVM model\n",
     "clf = svm.SVC()\n",
     "clf.fit(X_train, y_train)\n",
@@ -1520,34 +1517,67 @@
     "\n",
     "# Test the model on the testing set\n",
     "y_pred = clf.predict(X_test)\n",
+    "y_train_pred = clf.predict(X_train)\n",
+    "\n",
+    "# # Evaluate the model's performance\n",
+    "# accuracy = clf.score(X_test, y_test)\n",
+    "# print(\"Accuracy (X_test, y_test):\", accuracy)\n",
+    "\n",
+    "# # Evaluate the model's performance\n",
+    "# accuracy = clf.score(X_train, y_train)\n",
+    "# print(\"Accuracy (X_train, y_train):\", accuracy)\n",
     "\n",
     "# Evaluate the model's performance\n",
-    "accuracy = clf.score(X_test, y_test)\n",
-    "print(\"Accuracy:\", accuracy)\n"
+    "accuracy = metrics.accuracy_score(y_train, y_train_pred)\n",
+    "print(\"Training Data Accuracy using metrics.accuracy_score():\", accuracy)\n",
+    "\n",
+    "# Evaluate the model's performance\n",
+    "accuracy = metrics.accuracy_score(y_test, y_pred)\n",
+    "print(\"Test Data Accuracy using metrics.accuracy_score():\", accuracy)\n",
+    "\n",
+    "# Evaluate the model's performance\n",
+    "precision = metrics.precision_score(y_test, y_pred)\n",
+    "print(\"Precision using metrics.precision_score():\", precision)\n",
+    "\n",
+    "# Evaluate the model's performance\n",
+    "recall = metrics.recall_score(y_test, y_pred)\n",
+    "print(\"Recall using metrics.recall_score():\", recall)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.9667868951006913\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'plot_confusion_matrix' from 'sklearn.metrics' (c:\\Users\\Admin\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\metrics\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[47], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmetrics\u001b[39;00m \u001b[39mimport\u001b[39;00m classification_report, plot_confusion_matrix\n\u001b[0;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msns\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'plot_confusion_matrix' from 'sklearn.metrics' (c:\\Users\\Admin\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\metrics\\__init__.py)"
      ]
     }
    ],
    "source": [
-    "# Evaluate the model's performance\n",
-    "accuracy = clf.score(X_train, y_train)\n",
-    "print(\"Accuracy:\", accuracy)"
+    "from sklearn.metrics import classification_report, plot_confusion_matrix\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "conf_lr=confusion_matrix(y_test,y_pred)\n",
+    "fig, ax = plot_confusion_matrix(conf_mat=confusion_matrix(ytest, y_pred),\n",
+    "                                show_absolute=True,\n",
+    "                                show_normed=True,\n",
+    "                                colorbar=True)\n",
+    "plt.show()\n",
+    "print(\"\\nClassification Report of SVM Classifier:\\n\")\n",
+    "print(classification_report(y_test, y_pred))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1569,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
