Updated with Evaluation Metrics

--- a/ThesisLogic.ipynb
+++ b/ThesisLogic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "[10000 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "5340"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "4660"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "494"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
        "[9506 rows x 3 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
        "5030"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
        "4476"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
        "Name: tokenize, dtype: object"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -661,29 +661,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8531</th>\n",
-       "      <td>[paolo, roxas, yung, unang, beses, magsalita, ...</td>\n",
-       "      <td>[paolo, roxas, yung, unang, be, magsalita, har...</td>\n",
+       "      <th>555</th>\n",
+       "      <td>[also, few, people, remember, that, post, yola...</td>\n",
+       "      <td>[also, few, people, remember, that, post, yola...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>390</th>\n",
-       "      <td>[morales, says, she, has, reliable, source, to...</td>\n",
-       "      <td>[morale, say, she, ha, reliable, source, to, p...</td>\n",
+       "      <th>2649</th>\n",
+       "      <td>[si, binay, be]</td>\n",
+       "      <td>[si, binay, be]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7762</th>\n",
-       "      <td>[vp, binay, is, winner, in, providing, good, l...</td>\n",
-       "      <td>[vp, binay, is, winner, in, providing, good, l...</td>\n",
+       "      <th>8857</th>\n",
+       "      <td>[poe, miriam, roxas, and, duterte, hmm, mabigat]</td>\n",
+       "      <td>[poe, miriam, roxas, and, duterte, hmm, mabigat]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4835</th>\n",
-       "      <td>[to, mar, roxas, supporters, time, to, eat, yo...</td>\n",
-       "      <td>[to, mar, roxas, supporter, time, to, eat, you...</td>\n",
+       "      <th>6892</th>\n",
+       "      <td>[patawarin, nio, n, tatlong, bayan, binay, bae...</td>\n",
+       "      <td>[patawarin, nio, n, tatlong, bayan, binay, bae...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7553</th>\n",
-       "      <td>[okey, lang, manalo, si, duterte, wag, lang, s...</td>\n",
-       "      <td>[okey, lang, manalo, si, duterte, wag, lang, s...</td>\n",
+       "      <th>8663</th>\n",
+       "      <td>[there, is, so, much, commotion, in, facebook,...</td>\n",
+       "      <td>[there, is, so, much, commotion, in, facebook,...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -691,21 +691,21 @@
       ],
       "text/plain": [
        "                                               tokenize   \n",
-       "8531  [paolo, roxas, yung, unang, beses, magsalita, ...  \\\n",
-       "390   [morales, says, she, has, reliable, source, to...   \n",
-       "7762  [vp, binay, is, winner, in, providing, good, l...   \n",
-       "4835  [to, mar, roxas, supporters, time, to, eat, yo...   \n",
-       "7553  [okey, lang, manalo, si, duterte, wag, lang, s...   \n",
+       "555   [also, few, people, remember, that, post, yola...  \\\n",
+       "2649                                    [si, binay, be]   \n",
+       "8857   [poe, miriam, roxas, and, duterte, hmm, mabigat]   \n",
+       "6892  [patawarin, nio, n, tatlong, bayan, binay, bae...   \n",
+       "8663  [there, is, so, much, commotion, in, facebook,...   \n",
        "\n",
        "                                          lematize_nltk  \n",
-       "8531  [paolo, roxas, yung, unang, be, magsalita, har...  \n",
-       "390   [morale, say, she, ha, reliable, source, to, p...  \n",
-       "7762  [vp, binay, is, winner, in, providing, good, l...  \n",
-       "4835  [to, mar, roxas, supporter, time, to, eat, you...  \n",
-       "7553  [okey, lang, manalo, si, duterte, wag, lang, s...  "
+       "555   [also, few, people, remember, that, post, yola...  \n",
+       "2649                                    [si, binay, be]  \n",
+       "8857   [poe, miriam, roxas, and, duterte, hmm, mabigat]  \n",
+       "6892  [patawarin, nio, n, tatlong, bayan, binay, bae...  \n",
+       "8663  [there, is, so, much, commotion, in, facebook,...  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1260,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1466,7 @@
        "9505  [preliminary, and, partial, result, come, in, ...  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1477,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1491,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1546,38 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'plot_confusion_matrix' from 'sklearn.metrics' (c:\\Users\\Admin\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\metrics\\__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[47], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmetrics\u001b[39;00m \u001b[39mimport\u001b[39;00m classification_report, plot_confusion_matrix\n\u001b[0;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msns\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'plot_confusion_matrix' from 'sklearn.metrics' (c:\\Users\\Admin\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\metrics\\__init__.py)"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import classification_report, plot_confusion_matrix\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "conf_lr=confusion_matrix(y_test,y_pred)\n",
-    "fig, ax = plot_confusion_matrix(conf_mat=confusion_matrix(ytest, y_pred),\n",
-    "                                show_absolute=True,\n",
-    "                                show_normed=True,\n",
-    "                                colorbar=True)\n",
-    "plt.show()\n",
-    "print(\"\\nClassification Report of SVM Classifier:\\n\")\n",
-    "print(classification_report(y_test, y_pred))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1586,7 +1555,7 @@
        "['tfidf_vectorizer.joblib']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1599,15 +1568,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tangina mo jepoy dizon ang baho baho mo\n",
-      "Negative Statement\n"
+      "trainginamo\n",
+      "Positive sentiment\n"
      ]
     }
    ],
